--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <!--屏幕自适应-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
-    <title>2024</title>
+    <title>八月企业信用信息公示</title>
 <style type="text/css">
 html,body {
     height: 100%;
